Fixing List view on home page and added detail page
